Make sure location search field and login button align inline [WBOT-53]

--- a/src/main/resources/public/stylesheets/main.css
+++ b/src/main/resources/public/stylesheets/main.css
@@ -74,8 +74,8 @@ body, div {
   max-width: 150px;
 }
 
-.location-search .twitter-typeahead {
-  margin: 5px;
+.location-search {
+  margin-top: 5px;
 }
 
 #userMenuContainer {
